@@ -1,0 +1,44 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+<head>
+  <title>Force Index - FI</title>
+  <meta http-equiv="content-type"
+ content="text/html; charset=ISO-8859-1">
+</head>
+  <body>
+
+<h2><u>Force Index - FI</u></h2>
+<p>
+<img src="fi.png" alt="" width="716" height="753">
+</p>
+
+<h3>Description</h3>
+<p>
+Force Index = Volume Today * (Close Today - Close Yesterday)
+</p>
+<p>
+Use two separate FI indicators: a very short-term EMA (2-days)
+and a short-term EMA (13-days).
+</p>
+                                                   
+<h3>Parameters</h3>
+                                                      
+<ul>
+<li>Color - Color of the plot</li>
+<li>Label - The text to identify the FI plot</li>
+<li>Line Type - The line type for this indicator</li>
+<li>Smoothing - The period to use for the smoothing MA</li>
+<li>Smoothing Type - The type of MA to use for smoothing<br>
+</ul>
+
+<h3>Alerts</h3>
+<ul>
+</ul>
+
+<p>None</p>
+
+<h3>Acknowledgements</h3>
+<p>Alexander Elder, "Trading for a Living" ISBN: 0471592242, 0471592250</p>
+
+</body>
+</html>
