@@ -78,6 +78,7 @@
   <li><a href="dmi.html">Directional Movement Index - DMI</a></li>
   <li><a href="env.html">Envelope - ENV</a></li>
   <li><a href="ep.html">Exhaustion Points - EP</a></li>
+  <li><a href="fi.html">Force Index - FI</a></li>
   <li><a href="hlc.html">High Low Channel - HLC</a></li>
   <li><a href="ma.html">Moving Average - MA</a></li>
   <li><a href="macd.html">Moving Average Convergence Divergence - MACD</a></li>
