@@ -23,6 +23,7 @@ SUBDIRS += plugins/indicator/DMI
 SUBDIRS += plugins/indicator/DPO
 SUBDIRS += plugins/indicator/ENV
 SUBDIRS += plugins/indicator/EP
+SUBDIRS += plugins/indicator/FI
 SUBDIRS += plugins/indicator/HLC
 SUBDIRS += plugins/indicator/MA
 SUBDIRS += plugins/indicator/MA2
